# hydra-practice

./: .gitignore  README.md  pyproject.toml
1_argparse/configs/paths/: default.yaml
1_argparse/configs/transformers/: default.yaml
1_argparse/src/: main_argparse.py  main_hydra.py
2_instantiating/configs/: config.yaml
2_instantiating/configs/transformers/: default.yaml
3_customization/configs/: config.yaml
3_customization/configs/transformers/: roberta-base.yaml  roberta-large.yaml
3_customization/src/: main.py
