[project]
name = "hydra-practice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "osushinekotan", email = "spmt3710@gmail.com" }
]
dependencies = [
    "transformers>=4.39.3",
    "datasets>=2.18.0",
    "torch>=2.2.2",
    "accelerate>=0.29.1",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hydra_practice"]

[tool.ruff]
line-length = 120
lint.select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
